resolve referencing schema